# Barely

./: .gitignore  AGENTS.md  CLAUDE.md  EXTRACTION_PLAN.md  PHASE7_PLAN.md  PICKER_EXAMPLE.md  README.md  ROADMAP.md  STATUS.md  barely.bat  extract_repl_projects.py  extract_repl_system.py  extract_repl_tasks.py  extract_repl_workflow.py  pyproject.toml  requirements.txt  run_migration.py  run_migration_002.py  test_comma_separated.py  test_completer.py  test_context_and_pickers.py  test_default_repl.py  test_flag_fixes.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
.claude/: settings.local.json
barely/: __init__.py  formatting.py  utils.py
barely/cli/: __init__.py  main.py
barely/cli/commands/: __init__.py  projects.py  system.py  tasks.py  workflow.py
barely/core/: __init__.py  constants.py  exceptions.py  models.py  repository.py  service.py
barely/repl/: __init__.py  blitz.py  completer.py  display.py  formatting.py  main.py  parser.py  pickers.py  style.py  undo.py
barely/repl/commands/: __init__.py  projects.py  system.py  tasks.py  workflow.py
db/: schema.sql
db/migrations/: 001_add_scope.sql  002_scope_for_completion.sql
tests/: README.md  conftest.py  test_comma_separated.py  test_completer.py  test_context_and_pickers.py  test_default_repl.py  test_flag_fixes.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
