[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barely"
version = "0.3.0"
description = "Minimalist terminal-native task manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "numpy>=1.24.0",
    "pyaudiowpatch>=0.2.0",
]

[project.scripts]
barely = "barely.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["barely*"]
